# django-api-design

./: README.md  pyproject.toml
apps/puppies/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/puppies/migrations/: 0001_initial.py
apps/watchlist/: admin.py  models.py  urls.py  views.py
apps/watchlist/api/: serializers.py  urls.py  views.py
apps/watchlist/migrations/: 0001_initial.py  0002_auto_20211201_0536.py  0003_watchlist_platform.py  0004_review.py  0005_review_review_user.py
core/: settings.py  urls.py
tests/: test_models.py  test_views.py
