[tool.poetry]
name = "trydrf"
version = "0.1.0"
description = ""
authors = ["kofi-teddy <agudogot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
python-decouple = "^3.5"
dj-database-url = "^0.5.0"
Unipath = "^1.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pywatchman = "^1.4.1"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
